chore(shared-choice): add flex 1 to renderLabel box to fix IE11 overflow

--- a/shared/components/Choice/Choice.modules.scss
+++ b/shared/components/Choice/Choice.modules.scss
@@ -8,6 +8,10 @@
   align-items: flex-start;
 }
 
+.flexOne {
+  flex: 1;
+}
+
 .fakeInput {
   composes: thin from '../../styles/Borders.modules.scss';
 
